@@ -377,6 +377,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Use an actual minus sign in diff views, instead of a hyphen.
 * (bug 23732) Clarified "n links" message on Special:MostLinkedFiles
 * (bug 23731) Clarified "n links" message on Special:MostLinkedTemplates
+* (bug 25642) A exception is now thrown instead of a fatal error when using
+  $wgSMTP without PEAR mail package
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
